Refactor to use the Spoon library (#109)
* Fix errors in output caused by log4j in offline mode

* Remove unused class

* Migrate to JUnit 5

* Refactor

* Reformat and clean up normalizers

* Write to given output directory instead of input directory

* Fix recursive placeholder generation

* Add CONTRIBUTING.md

* Update README.md

* Remove unused files

* Update .dockerignore

* Update unit tests after fixing recursion bug

* Make logging level configurable through `LOGGING_LEVEL` env var

* Order mapping.json keys alphabetically

Apparently the order in which placeholders are added to the mapping is not guaranteed, causing the smoke tests to fail sometimes because the mapping.json has a different order.

Having ordered keys in an org.json.JSONObject is apparently not possible, so this switches the project to using com.google.gson instead.

* Set up test coverage reporting

* Add coverage badge to README

* Rewrite using https://github.com/INRIA/spoon

* Add unit tests

* Use approvals for snapshot testing

* Add unit tests for OutputWriter

* Add Javadoc to processor classes

* Merge smoke test scenarios into one

* Set compliance level to 19, add test cases for record classes and switch expressions

Note that support for Java 20 and 21 is not yet added to Spoon.

* Log placeholders while renaming

* Do not replace placeholders with new placeholders

* Fix renaming of record components

* Mark snapshot files as binary to preserve line endings

* Fix enum formatting

* Consistent formatting using google-java-format

* Change printing and formatting options

- No fully qualified types when printing
- Use AOSP style for formatting