@@ -1,7 +1,8 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "8.1.1"
     id "java"
     id "application"
+    id "jacoco"
+    id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 group = "org.exercism"
@@ -13,14 +14,30 @@ repositories {
 }
 
 dependencies {
-    implementation "org.json:json:20240303"
-    implementation "com.github.javaparser:javaparser-symbol-solver-core:3.25.7"
-    implementation "org.apache.logging.log4j:log4j-api:2.23.0"
-    implementation "org.apache.logging.log4j:log4j-core:2.23.0"
+    implementation "fr.inria.gforge.spoon:spoon-core:10.4.3-beta-18"
+    implementation "com.google.code.gson:gson:2.10.1"
+    implementation "com.google.googlejavaformat:google-java-format:1.19.2"
+    implementation "org.slf4j:slf4j-api:2.0.10"
+    implementation "ch.qos.logback:logback-core:1.4.12"
+    implementation "ch.qos.logback:logback-classic:1.4.12"
 
-    testImplementation "junit:junit:4.13.2"
+    testImplementation platform("org.junit:junit-bom:5.10.1")
+    testImplementation "org.junit.jupiter:junit-jupiter"
     testImplementation "org.assertj:assertj-core:3.25.3"
-    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "com.approvaltests:approvaltests:22.3.2"
+}
+
+jar {
+    manifest {
+        // Required for google-java-format
+        // https://github.com/google/google-java-format/blob/c20a02715cf8be569515857d96fd558eb71cfa72/README.md#as-a-library
+        attributes "Add-Exports": "jdk.compiler/com.sun.tools.javac.api " +
+                "jdk.compiler/com.sun.tools.javac.code " +
+                "jdk.compiler/com.sun.tools.javac.file " +
+                "jdk.compiler/com.sun.tools.javac.parser " +
+                "jdk.compiler/com.sun.tools.javac.tree " +
+                "jdk.compiler/com.sun.tools.javac.util"
+    }
 }
 
 shadowJar {
@@ -33,9 +50,29 @@ artifacts {
 }
 
 test {
+    useJUnitPlatform()
+
     testLogging {
         exceptionFormat = "full"
         showStandardStreams = true
         events = ["passed", "failed", "skipped"]
+    }
+
+    jvmArgs = [
+            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    ]
+
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
     }
 }
